--- a/src/yt-player.css
+++ b/src/yt-player.css
@@ -1,19 +1,3 @@
-/* YouTube full page video container */
-.videoYt {
-  position: relative;
-  padding-bottom: 56.25%; /* Aspect ratio 16:9 */
-  overflow: hidden;
-  border-radius: 0px;
-}
-
-.videoYt iframe {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-}
-
 /* Lazy YouTube */
 .NexosYt {
   position: relative;
@@ -23,25 +7,27 @@
   border: 2px solid rgba(255, 255, 255, 0.9);
 }
 
-.NexosYt img {
+.NexYt-thumbnail {
   width: 100%;
   top: -16.84%;
   left: 0;
   opacity: 0.95;
 }
 
-.NexosYt img, .NexosYt iframe, .NexosYt .play {
+.NexYt-thumbnail,
+.NexosYt iframe,
+.NexYt-play-btn {
   position: absolute;
 }
 
-.NexosYt iframe {
+.NexYt-iframe {
   width: 100%;
   height: 100%;
   bottom: 0;
   right: 0;
 }
 
-.NexosYt .play {
+.NexYt-play-btn {
   top: 50%;
   left: 50%;
   transform: translate3d(-50%, -50%, 0);
@@ -53,7 +39,7 @@
   cursor: pointer;
 }
 
-.NexosYt .play svg {
+.NexYt-play-btn svg {
   width: inherit;
   height: inherit;
   fill: none;
@@ -63,7 +49,7 @@
   stroke-width: 10;
 }
 
-.NexosYt .play .c {
+.NexYt-play-btn .c {
   stroke: rgba(255, 255, 255, 0.9);
   stroke-dasharray: 650;
   stroke-dashoffset: 650;
@@ -71,7 +57,7 @@
   opacity: 0.3;
 }
 
-.NexosYt .play .t {
+.NexYt-play-btn .t {
   stroke: rgba(255, 255, 255, 0.75);
   stroke-dasharray: 240;
   stroke-dashoffset: 480;
@@ -79,15 +65,15 @@
   transform: translateY(0);
 }
 
-.NexosYt .play:hover .t {
+.NexYt-play-btn:hover .t {
   animation: nudge 0.6s ease-in-out;
 }
 
-.NexosYt .play:hover .t,
-.NexosYt .play:hover .c {
+.NexYt-play-btn:hover .t,
+.NexYt-play-btn:hover .c {
   stroke-dashoffset: 0;
   opacity: 0.7;
-  stroke: #FF0000;
+  stroke: #ff80aa;
 }
 
 @keyframes nudge {
@@ -105,5 +91,28 @@
   }
   100% {
     transform: translateX(0);
+  }
+}
+
+/* Spinner */
+.NexosYt .NexYt-spinner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: 4px solid rgba(255, 255, 255, 0.3);
+  border-top: 4px solid #000;
+  border-radius: 50%;
+  width: 48px;
+  height: 48px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
